Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27019

Project part display names are bad for cmake projects

XMLWordPrintable

    • 0927ec40a (16.0)

      The name of a project part is user-facing. For instance, it is shown when the user has to choose between parse contexts when the same file is part of several products.

      For cmake, we get display names such as "Core::@e8138540d8b2daa0b357_cg1", which does not allow the user to make an informed decision if the first part is the same.

      If it's not possible to have "speaking names" there, we should probably present the origin in such a way that the user can look it up, e.g. project file path + line number.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cadam Cristian Adam
            kandeler Christian Kandeler
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes