CMakePM: Use CMake target name_language for compiler grup name

No need to use the CMake's target id which uses some sort of unique
identifier.

The CMake target's name is supposed to be unique in the project,
otherwise you get an error.

By using the target's language C, CXX, OBJC, OBJCXX, CUDA we can have an
OK user facing display name.

Fixes: QTCREATORBUG-27019
Change-Id: I3db1b55e067a92ef6a386e9c10fb19cbd876f750
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>